--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> </title>
+        <title> Fifa Score Keeper </title>
         <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.1.0.js"></script>
 		<script type="text/javascript" src="js/model.js"></script>
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
