--- a/web/index.html
+++ b/web/index.html
@@ -4,42 +4,65 @@
         <title> Fifa Score Keeper </title>
         <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.1.0.js"></script>
 		<script type="text/javascript" src="js/model.js"></script>
-		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="css/main.css" rel="stylesheet" media="screen">
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
+		<link href="css/main.css" rel="stylesheet" media="screen" />
+        <link rel="stylesheet/less" type="text/css" href="css/less/main.less" />
+		<script src="js/less-1.3.1.min.js"></script>
 	</head>
     <body>
-		<div id="main-wrapper" class="container-fluid pagination-centered">
-			<section data-bind="with: setup">
-					<div class="row-fluid">
-							<input id="homeTeam" type="text" data-bind="value: homeTeam" class="input-small" placeholder="Home team"/>
-							<input id="awayTeam" type="text" data-bind="value: awayTeam" class="input-small" placeholder="Away team"/>
-					</div>
-					<div class="row-fluid">
-							<input id="homePlayer" type="text" data-bind="value: homePlayer" class="input-small" placeholder="Player home" />
-							<input id="awayPlayer" type="text" data-bind="value: awayPlayer" class="input-small" placeholder="Player away" />
-					</div>
-					<div class="row-fluid">
-							<button data-bind="click: $parent.addMatch" class="btn">Add match setup</button>
-					</div>
-			
-			</section>
-			<section data-bind="visible: previousMatches().length > 0">
-                <table class="table-centered">
-                    <thead><tr>
-                        <th>Home</th><th>Away</th><th>Result</th><th></th>
-                    </tr></thead>
-                    <tbody data-bind="foreach: previousMatches">
-                        <tr>
-                            <td><span data-bind="text: homeTeam"></span></td>
-                            <td><span data-bind="text: awayTeam"></span></td>
-                            <td><span data-bind="text: result"></span></td>
-                            <td><a href="#" data-bind="click: $root.removeSeat">Remove</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
-		</div>
-	
+		<div id="main-wrapper" class="pagination-centered">
+            <div id="inner-wrapper" class="box">
+                <div class="row-fluid small-padding"></div>
+                <div id="main-header" class="row-fluid"><h1>Fifa score</h1></div>
+                <div class="row-fluid small-padding"></div>
+                <section data-bind="with: setup">
+
+                        <div class="row-fluid">
+                                <input id="homeTeam" type="text" data-bind="value: homeTeam" class="input-small homeBackground" placeholder="Home team"/>
+                                <input id="awayTeam" type="text" data-bind="value: awayTeam" class="input-small homeBackground" placeholder="Away team"/>
+                        </div>
+                        <div class="row-fluid">
+                                <input id="homePlayer" type="text" data-bind="value: homePlayer" class="input-small awayBackground" placeholder="Player home" />
+                                <input id="awayPlayer" type="text" data-bind="value: awayPlayer" class="input-small awayBackground" placeholder="Player away" />
+                        </div>
+                        <div class="row-fluid">
+                                <button data-bind="click: $parent.showScoreModal" class="btn">Register match result</button>
+                        </div>
+
+                </section>
+                <!--<section data-bind="visible: previousMatches().length > 0">-->
+                    <!--<table class="table-centered">-->
+                        <!--<thead><tr>-->
+                            <!--<th>Home</th><th>Away</th><th>Result</th><th></th>-->
+                        <!--</tr></thead>-->
+                        <!--<tbody data-bind="foreach: matches">-->
+                            <!--<tr>-->
+                                <!--<td><span data-bind="text: homeTeam"></span></td>-->
+                                <!--<td><span data-bind="text: awayTeam"></span></td>-->
+                                <!--<td><span data-bind="text: result"></span></td>-->
+                                <!--<td><a href="#" data-bind="click: $root.removeSeat">Remove</a></td>-->
+                            <!--</tr>-->
+                        <!--</tbody>-->
+                    <!--</table>-->
+                <!--</section>-->
+            <!--</div>-->
+                <!-- Modal -->
+                <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                        <h3 id="myModalLabel">Enter score</h3>
+                    </div>
+                    <div class="modal-body">
+                        <input id="homeGoals" type="text" data-bind="value: homeGoals" class="input-small homeBackground" placeholder="Home goals"/>
+                        <input id="awayGoals" type="text" data-bind="value: awayGoals" class="input-small awayBackground" placeholder="Away goals"/>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                        <button class="btn btn-primary" data-bind="click: $root.registerScore">Register</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 	
 
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -52,13 +75,34 @@
 				function MatchViewModel() {
 					var self = this;
 					self.setup = ko.observable(new MatchSetup());
-					self.previousMatches = ko.observableArray([]);
+					self.matches = ko.observableArray([]);
+                    self.awayGoals = ko.observable();
+                    self.homeGoals = ko.observable();
 
-					self.addMatch = function() {
 
-						self.previousMatches.push(self.setup());
-						self.setup(new MatchSetup());
+
+					self.showScoreModal = function() {
+                        $('#awayGoals').attr('placeholder', self.setup().awayPlayer() + " score");
+                        $('#homeGoals').attr('placeholder', self.setup().homePlayer() + " score");
+                        $('#myModal').modal({
+                            keyboard: true
+                        })
 					}
+
+                    self.registerScore = function() {
+
+                        var match = new Match();
+                        match.awayGoals = self.awayGoals();
+                        match.homeGoals = self.homeGoals();
+                        match.setup.awayPlayer = self.setup().awayPlayer();
+                        match.setup.awayTeam = self.setup().awayTeam();
+                        match.setup.homePlayer = self.setup().homePlayer();
+                        match.setup.homeTeam = self.setup().homeTeam();
+                        self.matches.push(match);
+                        self.awayGoals('');
+                        self.homeGoals('');
+                        $('#myModal').modal('hide');
+                    }
 				}
 
 				var model = new MatchViewModel();
@@ -80,7 +124,19 @@
 				$('#awayTeam').typeahead({source: listOfTeams});				
 				$('#homePlayer').typeahead({source: listOfPlayers});
 				$('#awayPlayer').typeahead({source: listOfPlayers});
+
+
+
+
 		</script>
+
+
+
+
+
+
+
+
 	
     </body>
     
