--- a/keeper/src/main/webapp/index.html
+++ b/keeper/src/main/webapp/index.html
@@ -15,6 +15,25 @@
         <div class="row-fluid large-padding"></div>
         <div id="main-header" class="row-fluid"><h1>Fifa score</h1></div>
         <div class="row-fluid small-padding"></div>
+
+        <section data-bind="visible: !$root.activeSession">
+            <div class="row-fluid">
+                <button data-bind="click: $root.showGameSessionModal" class="btn">Start game session</button>
+            </div>
+        </section>
+
+        <section data-bind="visible: $root.activeSession">
+            <div class="row-fluid" data-bind="with: $root.activeSession">
+                Session name: <span data-bind="value: name"></span>
+                Session location: <span data-bind="value: location"></span>
+            </div>
+        </section>
+
+
+        <div class="row-fluid small-padding"></div>
+
+
+
         <section data-bind="with: setup">
 
             <div class="row-fluid">
@@ -30,24 +49,7 @@
             </div>
 
         </section>
-        <!--<section data-bind="visible: previousMatches().length > 0">-->
-        <!--<table class="table-centered">-->
-        <!--<thead><tr>-->
-        <!--<th>Home</th><th>Away</th><th>Result</th><th></th>-->
-        <!--</tr></thead>-->
-        <!--<tbody data-bind="foreach: matches">-->
-        <!--<tr>-->
-        <!--<td><span data-bind="text: homeTeam"></span></td>-->
-        <!--<td><span data-bind="text: awayTeam"></span></td>-->
-        <!--<td><span data-bind="text: result"></span></td>-->
-        <!--<td><a href="#" data-bind="click: $root.removeSeat">Remove</a></td>-->
-        <!--</tr>-->
-        <!--</tbody>-->
-        <!--</table>-->
-        <!--</section>-->
-        <!--</div>-->
-        <!-- Modal -->
-        <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div id="resultModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
                 <h3 id="myModalLabel">Enter score</h3>
@@ -59,6 +61,22 @@
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
                 <button class="btn btn-primary" data-bind="click: $root.registerScore">Register</button>
+            </div>
+        </div>
+
+
+        <div id="sessionModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                <h3 id="sessionModalLabel">Create new game session</h3>
+            </div>
+            <div class="modal-body">
+                <input id="sessionName" type="text" data-bind="value: sessionName" class="input-small homeBackground" placeholder="Session name"/>
+                <input id="sessionLocation" type="text" data-bind="value: sessionLocation" class="input-small awayBackground" placeholder="Session location"/>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                <button class="btn btn-primary" data-bind="click: $root.registerGameSession">Register</button>
             </div>
         </div>
     </div>
@@ -79,12 +97,16 @@
         self.awayGoals = ko.observable();
         self.homeGoals = ko.observable();
 
+        self.activeSession = null;
+        self.sessionName = ko.observable();
+        self.sessionLocation = ko.observable();
+
         self.setupComplete = self.setup().isComplete
 
         self.showScoreModal = function () {
             $('#awayGoals').attr('placeholder', self.setup().awayPlayer() + " score");
             $('#homeGoals').attr('placeholder', self.setup().homePlayer() + " score");
-            $('#myModal').modal({
+            $('#resultModal').modal({
                 keyboard: true
             })
         }
@@ -98,40 +120,44 @@
             self.matches.push(match);
             self.awayGoals('');
             self.homeGoals('');
-            $('#myModal').modal('hide');
+            $('#resultModal').modal('hide');
+        }
+
+        self.showGameSessionModal = function() {
+            $('#sessionModal').modal({
+                keyboard: true
+            })
+        }
+
+        self.registerGameSession = function() {
+            var gameSession = new GameSession();
+            gameSession.location = self.sessionLocation;
+            gameSession.name = self.sessionName;
+            $.ajax({
+                url: "ajax/session",
+                contentType: 'application/json',
+                method: "POST",
+                data: ko.toJSON(gameSession),
+                success: function(data) {
+                    console.log(data);
+                    console.log(data.id);
+                    var newSession = new GameSession();
+                    newSession.id(data.id);
+                    newSession.name(data.name);
+                    newSession.location(data.location);
+                    newSession.sessionStarted(data.sesssionStarted);
+                    self.activeSession = newSession;
+
+
+                }
+
+            });
+            $('#sessionModal').modal('hide');
         }
 
         self.availablePlayers = ko.observableArray([]);
         self.availableTeams = ko.observableArray([]);
     }
-
-
-    //				$('#awayPlayer').typeahead({
-    //                    source: function (query, process) {
-    //                        players = [];
-    //                        map = {};
-    //                        $.ajax({
-    //                                    url: "ajax/player",
-    //                                    async: false,
-    //                                    success: function (playerData, status) {
-    //                                        $.each(playerData, function (i, player) {
-    //                                            map[player.firstName] = player;
-    //                                            players.push(player.firstName);
-    //                                        });
-    //                                    }
-    //
-    //                                }
-    //                        );
-    //
-    //
-    //
-    //                        process(players);
-    //                    },
-    //                    updater: function(item) {
-    //                        $('hiddenInputElement').val(map[item].id);
-    //                        return item;
-    //                    }
-    //                });
 
 
     var model;
